bio and culture update

--- a/roobiology.html
+++ b/roobiology.html
@@ -429,9 +429,7 @@ years.&nbsp; <span class="A-fanon">It might be achieved by altering the subjects
 					<span class="A-tv">They have Super-ganglion</span> which allows them to re-order, re-rout and re-program their neural pathways at will.
 					Among other things this
 					<span class="A-game">bio-rhythmic control</span> allows them to </span>
-				<span class="A-audiobook">separate the operation of the two hemispheres of their brains</span>
-				<span class="A-audiobook">
-					<span class="A-audiobook">, greatly boosting their ability to multi-task. </span>They can bypass compromised areas of their brains and switch
+				<span class="A-audiobook">separate the operation of the two hemispheres of their brains</span><span class="A-audiobook"><span class="A-audiobook">, greatly boosting their ability to multi-task. </span>They can bypass compromised areas of their brains and switch
 					off the parts of their brain that process input from various senses, allowing them to limit their vast number of senses
 					to the same range as a human. Through an act of will, a Gallifreyan can compartmentalize pain to the degree that they
 					can block the pain from a severed limb. </span>
@@ -477,12 +475,16 @@ years.&nbsp; <span class="A-fanon">It might be achieved by altering the subjects
 					direct control over their metabolism. This nerve cluster is located along their left collar bone beneath the left clavicle.
 					With sustained concentration Gallifreyans can send messages to the parts of their autonomic brain that controls various
 					systems (like the circulatory system). This allows them to consciously modulate and control the details off that system.
-					<span class="A-game">They can double the pace of their body's functions if necessary. </span> Unfortunately a blow at this </span>
+					<span class="A-game">They can double the pace of their body's functions if necessary.&nbsp;</span> Unfortunately a blow at this </span>
 				<span class="A-audiobook">at this cluster will render them unconscious. </span>
 			</div>
 			<div class="section">
 				<span class="A-audiobook">These systems frees the rest of the brain for purely intellectual pursuits, allowing them to think of over 7,432 ideas
-					in a few minutes and achieve mental calculations beyond that of most sapient species.
+					in a few minutes and achieve mental calculations beyond that of most sapient species. <span class="A-tv">There
+is even a case of a Gallifreyan brain being able to determine&nbsp;how
+to avoid being hit by energy beams from 50 attackers while ploting out
+how to use those beams to charge the device they are carrying - all in
+4 nano-seconds!</span>
 					<span class="A-tv">If these basic body function are being handled by an external life-support system then Gallifreyans are even capable
 						of adjusting
 						<span class="A-audiobook">or reprogramming</span> their autonomic brain for more complex processes, such as consciousness and communications.
@@ -824,7 +826,7 @@ absorb a dying Gallifreyan's memories. </span>
 			<div class="section">
 				<span class="A-licensed">
 					<span class="A-audiobook">Aside from two extra ribs (for a total of 26) </span>a Gallifreyan's skeleton is almost identical to a humans.
-					<span class="A-audiobook">Their teeth are immune to all forms of tooth decay, and never needed to brush their teeth.&nbsp;</span></span><span class="A-licensed">By human standards, most Gallifreyans are tall, with solemn, learned faces.</span><span class="A-licensed"><span class="A-audiobook"></span>
+					<span class="A-audiobook">Their teeth are immune to normal forms of tooth decay, so they never needed to brush their teeth.&nbsp;</span></span><span class="A-tv">However, when damaged, they can end up needing fillings inserted in their teeth.&nbsp;<span class="A-audiobook">These fillings are supposed to regenerate when their body regenerates (though this process isn't perfect). </span></span><span class="A-licensed">By human standards, most Gallifreyans are tall, with solemn, learned faces.</span><span class="A-licensed"><span class="A-audiobook"></span>
 				</span>
 				<span class="A-audiobook">Gallifreyans have got multiple organs of virtually everything. They have 2 of most of the organs that humans have only
 					one of, and 4 of the organs that humans have only two of. </span>
@@ -865,7 +867,10 @@ period of time. </span>
 				<span class="A-tv">
 					<span class="A-audiobook">
 						<span class="A-tv">
-							<span class="A-tv">remain aware and physically active in the -270 C cold of outer space for 6 minutes. </span>After that point temperatures
+							<span class="A-tv">remain
+aware and physically active in the -270 C cold of outer space for 6
+minutes (though they can be permanently blinded if their eyes aren't
+protected). </span>After that point temperatures
 							of several hundred degrees below 0 C will cause a Gallifreyan to lose control of their body and appear dead. But even
 							in this stated their mind is in fact very active.
 							<span class="A-infinity">They can't experience true thoughts or memories, but emotions and impressions from there senses can be perceived.
@@ -879,10 +884,7 @@ period of time. </span>
 				</span>
 			</div>
 			<div class="section">
-				<span class="A-tv">They can have fillings inserted in their teeth
-					<span class="A-audiobook"> that are supposed to regenerate when their body regenerates (though this process isn't perfect). </span>
-				</span>
-				<span class="A-tv">Gallifreyan probably have tonsils and its not probably not unknown for them to have to be removed. </span>
+				<span class="A-tv"><span class="A-audiobook">&nbsp;</span></span><span class="A-tv">Gallifreyan probably have tonsils and its not probably not unknown for them to have to be removed. </span>
 				<span class="A-audiobook">Gallifreyans have more than one stomach and are not as vulnerable to malnutrition as Humans are. </span>
 				<span class="A-audiobook">
 					<span class="A-tv">Some (if not all) believe that only one meal a day is perfectly normal. </span>Despite this their metabolism is relatively
@@ -992,7 +994,7 @@ too many minutes. </span>Most humans are stronger then the average Gallifreyan <
 			<div class="section">
 				<span class="A-audiobook">Gallifreyans need far less sleep than most humanoids. Popular concensus is that 1 hour sleep a day is more then enough.
 					This is because a Gallifreyan can enter self-induced trance where they can ponder complex ideas without any outside
-					distractions. 20 minutes in this state is equivalent to 8 hours of sleep for a human.; Thus they only need about 1-6
+					distractions. 20 minutes in this state is equivalent to 8 hours of sleep for a human. Thus they only need about 1-6
 					hours of sleep every 2 days and they have the advantage of not requiring to take their rest in bulk. A ten minute doze
 					here, a half hour snooze there, is a valid contribution to their three hour quota. While some become tired after only
 					being awake for only 4 days, others have periods of hyperactivity followed by days of sleeping. While most prefer 1-3
