--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -271,8 +271,10 @@ secret of space time travel."" <br>"Well what's so wrong in all that?"
 				<span class="A-notbbc">(aka Chapterhouses). </span>
 				<span class="A-audiobook">And each House is lead by a Kithriarch. </span>
 				<span class="A-notbbc"> There are well over 18 houses. </span>
-				<span class="A-audiobook">The physical houses are sentient and the oldest living thing on the planet. Each House has a
-					<span class="A-notbbc">loomshed which holds its </span>loom. The Honorable Central Population Directory defines the quota of cousins for each
+				<span class="A-audiobook">The
+physical houses are sentient and the oldest living thing on the planet.
+Their roots extend deep into the ground beneath them. &nbsp;Each House
+has a <span class="A-notbbc">loomshed which holds its </span>loom. The Honorable Central Population Directory defines the quota of cousins for each
 					House's Loom. This loom has a unique genetic core to loom its cousins. This creates a template that standardizes the
 					abilities
 					<span class="A-alternate">and blood </span>of everyone loomling of that family. The interior of a House and its furniture are designed to a massive
@@ -506,13 +508,19 @@ House Heartshaven. Cousins include: </span>
 					</li>
 					<li>
 						<span class="A-audiobook">
-							<span style="font-weight: bold;">House of Stillhaven: </span>A House associated with the Prydon Chapter. </span>
+							<span style="font-weight: bold;">House of Stillhaven: </span>A
+House associated with the Prydon Chapter. &nbsp;During the Last Great
+Time War the patriarch of this house opposed the Ultimate
+Sanction.&nbsp;As punishment the cousins of this house had their
+memories erased and were used in experiments. &nbsp; </span>
 					</li>
 					<li>
 						<span class="A-notbbc">
 							<span style="font-weight: bold;">House of Wherewithal:</span>
-							<span class="A-audiobook">A decrepit old House in the mountains of Southern Gallifrey. This house had no interest in Gallifreyan traditions.
-								Most of the cousins are female, including Baba, </span>
+							<span class="A-audiobook">A
+decrepit old House in the mountains of Southern Gallifrey that had
+hundreds of stories. This house had no interest in Gallifreyan
+traditions. Most of the cousins are female, including Baba, </span>
 							<span class="A-notbbc">and the three headed hydra-creature Faith, Hope, Susan. Lilith (aka
 								<span class="A-audiobook">Iris Wildthyme</span>) was adopted
 								<span class="A-audiobook">into this house. </span>
@@ -619,12 +627,18 @@ happened.</span>
 					</li>
 					<li>
 						<span class="A-notbbc">
-							<span style="font-weight: bold;">House of Ixion: </span>This House is located on the edge of the civilized portion of Gallifrey next to a mountain
-							range. Its original Family left during the first Diaspora leaving only a line of caretakers to watch after the House.
-							Millions of years later Morbius chose it as the Headquarters for the Order of the Weal and made one of the caretakers,
-							Chatelaine Thessalia, head of the organization. Its “cousins” were malcontents from larger Houses who
-							were combat trained. Despite this training most of their duties were administrative. They Loom of Ixion was never
-							used but rumor has it that they tampered with other House’s Looms to produced mutants and renegades. </span>
+							<span style="font-weight: bold;">House of Ixion: </span>This
+House is located on the edge of the civilized portion of Gallifrey next
+to a mountain range. Indeed it is the southern most House on Gallifrey.
+&nbsp;Its original Family left during the first Diaspora leaving only a
+line of caretakers to watch after the House. Millions of years later
+Morbius chose it as the Headquarters for the Order of the Weal and made
+one of the caretakers, Chatelaine Thessalia, head of the organization.
+Its “cousins” were malcontents from larger Houses who were combat
+trained. Despite this training most of their duties were
+administrative. They Loom of Ixion was never used but rumor has it that
+they tampered with other House’s Looms to produced mutants and
+renegades. </span>
 					</li>
 					<li>
 						<span class="A-audiobook">
@@ -1299,7 +1313,10 @@ all activity. <span class="A-fanon">For this reason </span>some areas are config
 						<span class="A-game">Machines take care of all of the needs of the community. </span>
 						<span class="A-audiobook">Gallifreyan
 fabricators use tachyonic re-creation to create whatever is needed.
-There are Robeing Rooms filled with rails and racks of clothes.&nbsp;
+There are Robeing Rooms filled with rails and racks of clothes. These
+wardrobes have been described as wibbly-wobbly as they allow the user,
+from an outsider's perspective, to change their clothes
+instantly.&nbsp;
 Dresser servants are trained to match the robes fit any occasion. <span class="A-licensed">Fashions only change every few millennia.</span> </span><span class="A-game">Even the unemployed have a standard of living greater then most beings in the cosmos. While there is no requirement
 							to be employed, once out of school most Gallifreyans become bored and take up a hobby or being working some sort of
 							job to help the community. </span>
@@ -2252,7 +2269,7 @@ how to speak or read it.&nbsp;</span></span><span class="A-audiobook"><span clas
 							<li>
 								<span class="A-audiobook">“Peoples of the Universe, please attend carefully. The message that follows is vital to the future of you all.
 									I am President ____ of the High Council of Time Lords” - This appears to be the traditional Time Lord way
-									of opening a speech to Spiral Politic."</span></li><li><span class="A-audiobook">“Rassilon’s Blood”</span><span class="A-audiobook"> - Gallifrey profanity</span></li>
+									of opening a speech to Spiral Politic."</span></li><li><span class="A-audiobook">"Pig-rats deserting a &nbsp;a disintegrating time skiff."&nbsp;<br></span></li><li><span class="A-audiobook">“Rassilon’s Blood”</span><span class="A-audiobook"> - Gallifrey profanity</span></li>
 							<li>
 								<span class="A-audiobook">"Rassilon's Death" - Gallifrey profanity</span>
 							</li>
@@ -2362,8 +2379,7 @@ how to speak or read it.&nbsp;</span></span><span class="A-audiobook"><span clas
 								<span class="A-audiobook">"You see all those stars? Each one of those represents a promise. All the time they shine the promise remains unbroken"</span>
 							</li>
 							<li>
-								<span class="A-audiobook">"Yssgaroth Curse You"</span>
-							</li>
+								<span class="A-audiobook">"Yssgaroth Curse You"</span></li><li><span class="A-audiobook"><span class="A-licensed">"Zagreus’ Teeth!"</span><br></span></li>
 							<li>
 								<span class="A-audiobook">"Zagreus
 sits inside your head / Zagreus lives among the dead / Zagreus sees you
