--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -1649,7 +1649,9 @@ deceased.</span><span style=""><span class="A-tv"></span></span><span class="A-a
 						<span class="A-infinity">days, </span>
 						<span class="A-audiobook">years </span>
 						<span class="A-tv">are identical to the ones used on Earth. </span>
-						<span class="A-audiobook">A Gallifreyan month is probably equal to 27 days. </span>
+						<span class="A-audiobook">A
+Gallifreyan month is probably equal to 27 days. &nbsp;Gallifreyans have
+weeks but the number of days in a week hasn't been revealed <span class="A-fanon">(probably 6).</span> </span>
 						<span class="A-infinity"><br><br>Gallifrey time is told in 18 hour days. 9 hours of daylight and 9 hours of night. The length of the hours are dependent
 							on the season and geographical location. </span>
 						<span class="A-audiobook">The passage of hours is marked by the ringing of bells. The number of rings denote the hour. </span>
@@ -1701,8 +1703,7 @@ deceased.</span><span style=""><span class="A-tv"></span></span><span class="A-a
 							</li>
 							<li>
 								<span class="A-licensed">1 cycle =
-									<span class="A-fanon">4 spans </span> (or approximately 23 years)</span>
-							</li>
+									<span class="A-fanon">4 spans </span> (or approximately 23 years)</span></li><li><span class="A-licensed"><span class="A-game">1 epoch =&nbsp;tens of millions of years (also known as Deep Time)</span><br></span></li>
 						</ul>
 					</div>
 					<figure>
