updated gov stuff

--- a/rootimelord.html
+++ b/rootimelord.html
@@ -792,8 +792,7 @@ state.<span class="A-licensed"> The Omega Limitation Effect describes how</span>
 					artron levels (caused by spending lots of time in the Vortex) can increase the chance of it manifesting. Legend has
 					it that Gallifreyans of the distant past knew how to cure Twelfth Hour Syndrome using the Matrix to invoke multiple
 					incarnations in a retro-regeneration. </span>
-				<span class="A-audiobook">Insane Time Lords are usually quietly locked away in institutions</span>
-				<span class="A-licensed"> like the Quantum of Solace. </span>
+				<span class="A-audiobook">Insane Time Lords are usually quietly locked away in institutions like the Gomer's Asylum or</span><span class="A-licensed"> the Quantum of Solace. </span>
 				<span class="A-tv">Any Time Lord who has access to the power of the heart of the Vortex would become a vengeful god. </span>
 			</div>
 		</div>
