finished Gov Stuff

--- a/roogovernment.html
+++ b/roogovernment.html
@@ -1118,9 +1118,7 @@ presidential files, and the Omega Vaults.&nbsp;</span><span class="A-licensed"><
 						<span class="A-audiobook">Inquisitor, Captain, Commander, Under-Assassin, </span></span><span class="A-audiobook"><span class="A-licensed">and Special Time-Space Troopers (ST-ST)</span></span><span class="A-notbbc"><span class="A-audiobook"> are all CIA titles. Once they imprison someone not even the President can
 							overturn the judgment. </span><br><br>CIA Investigators loose all traditional rank and connections to their colleges when
 						they join. </span>
-					<span class="A-tv">However their bio-data extract will never mention that they are affiliated with the CIA.
-						<span class="A-game"> If an agent is uncovered while in the field
-							<span class="A-fanon">by the other temporal powers</span> the High Council will deny that the agent works for the CIA. <span class="A-audiobook">Most CIA missions are performed by Apprentice Grade Time Lords.</span> These&nbsp; Field Agents have are usualy between 100, and 1,200 years old and
+					<span class="A-tv">However their bio-data extract will never mention that they are affiliated with the CIA.<span class="A-game"> <span class="A-audiobook">Most CIA missions are performed by Apprentice Grade Time Lords.</span> These&nbsp; Field Agents have are usualy between 100, and 1,200 years old and
 							tend to go through a life-span approximately every 150 years. </span>
 					</span>
 					<span class="A-notbbc">They appear to join until their final death day. </span>
@@ -1146,7 +1144,9 @@ The CIA’s Special Time-Space Troopers wear elongated collars in
 addition to the black robes and tight hoods. </span>Field agents are equipped with details histories,&nbsp;false identification, documents of authority (including
 						Psychic Paper), and currency for various temporal nexus points. </span><span class="A-audiobook">Like all Time Lords in the field, they carry galactic compasses.<span class="A-licensed"> </span></span><span class="A-audiobook"><br>&nbsp;</span><span class="A-audiobook"></span><span class="A-audiobook"><br></span><span class="A-tv"><span class="A-game"><span class="A-audiobook">Most CIA missions are performed by Apprentice Grade Time Lords with Time Rings. However, s</span></span></span><span class="A-audiobook">ince unregistered TARDISes are much more difficult for Gallifrey to monitor, the</span><span class="A-audiobook"> CIA always makes sure to have a few unregistered TARDISes on hand.</span><span class="A-audiobook"></span><span class="A-audiobook"> Most
 TARDISes used by the CIA's Field Agents have enhanced Recall Circuits
-and remote self-destruct systems. </span><span class="A-tv"><span class="A-game">When
+and remote self-destruct systems.&nbsp;</span><span class="A-tv">
+						<span class="A-game"> If an agent is uncovered while in the field
+							<span class="A-fanon">by the other temporal powers</span> the High Council will deny that the agent works for the CIA.</span></span><span class="A-audiobook"> </span><span class="A-tv"><span class="A-game">When
 field agents lose access to their own TARDIS in the field an Extraction
 TARDIS is sent to pick them up. However agent who failed a mission is
 likely to be exiled or sentenced to Shada.</span></span><span class="A-audiobook"></span><span class="A-notbbc"><span class="A-game"></span></span><span class="A-notbbc"><br><br></span><span class="A-audiobook">Typical Time Lord weapons don’t need to be fired, instead
@@ -1171,9 +1171,8 @@ likely to be exiled or sentenced to Shada.</span></span><span class="A-audiobook
 						from the outside universe. </span><span class="A-audiobook"><span class="A-licensed">Article
 57, Subsection 12 of the Shadow Proclamation is titled “Jurisdiction of
 the Celestial Intervention Agency.” Viewing any records classified by this
-subsection requires the approval of the Castellan.</span></span><br><span class="A-audiobook"><br></span><span class="A-game">In theory, the Supreme Court was responsible for judging non-Gallifreyan time active species or individuals who had
-						violated the Laws of Time. </span>
-					<span class="A-notbbc"><span class="A-audiobook">It is standard CIA protocol that any member of a lesser
+subsection requires the approval of the Castellan.</span></span><br><span class="A-audiobook"><br></span><span class="A-game"></span><span class="A-notbbc"><span class="A-audiobook">Chapter 9 if the CIA was tasked with monitoring and confronting other species that threatened to break the laws of time. </span></span><span class="A-game">In theory, the Supreme Court was responsible for judging non-Gallifreyan time active species or individuals who had
+						violated the Laws of Time.&nbsp;</span><span class="A-notbbc"><span class="A-audiobook"> It is standard CIA protocol that any member of a lesser
 species who is transported through time and space by a Time Lord should
 have their memory wiped and be returned to their native time zone. </span> It should be noted that </span>
 					<span class="A-notbbc">Gallifreyan memory wiping techniques aren't totally reliable and the memories will often reappear as dreams. </span><span class="A-audiobook">Unfortunately, the Time Lords are, in reality, a very fearful people, and anything the don’t understand is perceived
@@ -1236,7 +1235,7 @@ have their memory wiped and be returned to their native time zone. </span> It sh
 				</figure>
 				<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 				<h2>THE CHAPTERHOUSE GUARD
-					<br>The Chancellery Guard, the Watch</h2>
+					<br>The Chancellery Guard, Chancery Guard, the Watch</h2>
 				<div class="section">
 					<span class="A-tv"> The Watch </span>
 					<span class="A-notbbc">represents Gallifrey’s only real “army" but really </span>
@@ -1417,7 +1416,7 @@ the Mind Probe were made illegal. </span>
 								</ul>
 							</li>
 							<li>
-								<span class="A-licensed">*The Disciplinary </span>
+								<span class="A-licensed">The Disciplinary </span>
 								<span class="A-tv">Forced Regeneration
 									<span class="A-fanon">(probably regarded as a type of death sentence) </span>
 								</span>
@@ -1437,7 +1436,7 @@ the Mind Probe were made illegal. </span>
 								</ul>
 							</li>
 							<li>
-								<span class="A-alternate">* Indefinite Imprisonment in their own TARDIS</span>
+								<span class="A-alternate">Indefinite Imprisonment in their own TARDIS</span>
 								<ul>
 									<li>
 										<span class="A-alternate">The standard punishment for a “Sex Change Regeneration” (Before the Time War this was considered to
@@ -1552,7 +1551,7 @@ the Mind Probe were made illegal. </span>
 									</li>
 									<li>
 										<span class="A-audiobook">Carried out using an </span>
-										<span class="A-notbbc">Omnicalculator such as D-Mat gun </span>
+										<span class="A-notbbc">Omnicalculator (such as D-Mat gun </span>
 										<span class="A-audiobook">or the </span>
 										<span class="A-audiobook">Oubliette of Eternity)</span>
 									</li>
