Web of Time update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 			</a>
 		</div>
 		<div class="nav">
-
 			<ul>
 				<li class="delete">
 					<a href="index.html">Master Index</a>
@@ -207,23 +206,10 @@
 				</span>
 			</div>
 			<div class="section">
-				<span class="A-fanon">I
-have (shall we say 'an obsessive'? Yes. Yes, we shall) an obsessive
-interest in the history of the history of the Doctor's people from
-before the time of Rassilon to its resurrection after the Time War with
-the Daleks. The idea behind this web page is to trace and collect all
-the little details about Time Lord biology, culture, and history that
-we have been given over the last half-century. I've also added a
-section on the Daleks (though it doesn't cover as much material as I'd
-like). </span>
+				<span class="A-fanon">I have (shall we say 'an obsessive'? Yes. Yes, we shall) an obsessive interest in the history of the history of the Doctor's people from before the time of Rassilon to its resurrection after the Time War with the Daleks. The idea behind this web page is to trace and collect all the little details about Time Lord biology, culture, and history that we have been given over the last half-century. I've also added a section on the Daleks (though it doesn't cover as much material as I'd like). </span>
 			</div>
 			<div class="section">
-				<span class="A-fanon">If
-you have any doubts as to the validity of the data presented, just use
-your mouse to click on the text. This will reveal the color coding for
-sources for the entire paragraph. The Quick Color Key button in the top
-menu will show you the source of each color. Alternately click on the <a href="#key">Sources</a> 
-				button for a somewhat more detailed description. </span>
+				<span class="A-fanon">If you have any doubts as to the validity of the data presented, just use your mouse to click on the text. This will reveal the color coding for sources for the entire paragraph. The Quick Color Key button in the top menu will show you the source of each color. Alternately click on the <a href="#key">Sources</a> button for a somewhat more detailed description. </span>
 			</div>
 		</div>
 			<div class="title">
